<resources>
    <string name="appIntroKami">کامدار</string>
    <string name="appIntroKamiDetail">اب کسانوں کو سمبھالنا اور آسان</string>
    <string name="appIntroTitle1">روزنامچہ</string>
    <string name="appIntroTitle1Detail">روز کے معملات درج کرسکتے ہیں</string>
    <string name="appIntroReport">رپورٹ</string>
    <string name="appIntroReportDetails">فصل کی کٹائی میں زمین سے متعلق رپورٹ حاصل کریں</string>


    <string name="app_name">Kamdar</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="langtitle">زبان</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="contacttype">  چار  آنہ</string>
    <string name="contracttype">  آتھ آنہ </string>
    <string name="urdu">اردو</string>
    <string name="sindhi">سندھی</string>
    <string name="english">English</string>
    <string name="hari1">سیلیکٹ کریں</string>
    <string name="hari2">گگل خان</string>
    <string name="hari3">ولید کرامد</string>
    <integer name="land1">234</integer>
    <integer name="land2">125</integer>
    <integer name="land3">12</integer>
    <string name="fasl2">کپاس</string>
    <string name="fasl1">گندم</string>
    <string name="fasl3">گنا</string>
    <string name="tax">ٹیکس</string>
    <string name="tax1">اشر</string>
    <string name="company">سونا یوریا کمپنی</string>
    <string name="company1">چاند کمپنی</string>
    <string name="machine">کیٹر پیلر</string>
    <string name="machine2">ٹویوٹا</string>
    <string name="languageText">٭اپنی من پسند زبان کو منتخب کریں</string>
    <string name="searchFasl">منتخب کریں</string>
    <string name="fasal_name">فصل کا نام :</string>
    <string name="fasal_year">فصل کا سال :</string>
    <string name="fasal_season">فصل کا موسم:</string>
    <string name="submit">جمع کریں</string>
    <string name="warningMessage">کیا آپ واقعی اس اندراج کو ختم کرنا چاہتے ہیں؟</string>
    <string name="warning" > انتباہ </string>
    <string name="yes" > ہاں</string>
    <string name="no" > نہیں</string>
    <string name="dialog_title">منتخب کریں</string>

<string name="success">شکریہ! اندراج ہوگیا ہے۔</string>

    <string name="empty">یہ جگہ خالی ہے </string>


    <string name="input_land">زمین اندراج</string>
    <string name="input_machine">مشین اندراج</string>
    <string name="input_seed">بیج اندراج</string>
    <string name="input_pesticides">دوائی اندراج</string>
    <string name="input_fertilizer">کھاد اندراج</string>
    <string name="input_farmer">ہاری اندراج</string>
    <string name="input_fasal">ٖفصل اندراج</string>
    <string name="not_unique">یہ اندراج پہلے ہوچکا ہے</string>
    <string name="dialog_enter_zamen">زمین نمبر سیلیکٹ کریں</string>
    <string name="dialog_enter_fasal">فصل منتخب کریں</string>
    <string name="dialog_enter_contract">ماہدہ منتخب کریں</string>
    <string name="dialog_input_date">تاریخ منتخب کریں</string>
    <string name="emptyAbove">اوپر دی ہوئی جگہ میں سے کوئی جگہ خالی ہے۔</string>
    <string name="dialog_format_cnic">اس جگہ کا فارمیٹ ٹھیک نہیں ہے۔</string>
    <string name="app_intro">زمیندار کا ساتھی</string>


</resources>
