<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="fill_parent"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg2"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true"
    android:fillViewport="false"
    android:id="@+id/fg">

    <LinearLayout
        android:orientation="vertical"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="25dp"
        android:paddingLeft="24dp"
        android:paddingBottom="25dp"
        android:paddingRight="24dp">


    <ImageView android:src="@drawable/logo1"
        android:layout_width="wrap_content"
        android:layout_height="72dp"
        android:layout_marginBottom="24dp"
        android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/languageText"
            android:textColor="#ffffff"
            android:id="@+id/textView60"
            android:layout_gravity="center_horizontal" />

<RelativeLayout

    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:paddingTop="200dp"
    android:paddingLeft="24dp"
    android:paddingRight="24dp"
    android:weightSum="1">

    <belka.us.androidtoggleswitch.widgets.ToggleSwitch
        android:id="@+id/languageSelect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"

        custom:activeBgColor="@color/colorPrimaryDark"
        custom:activeTextColor="@android:color/white"
        custom:inactiveBgColor="#0000"
        custom:textToggleLeft="@string/urdu"
        custom:textToggleRight="@string/sindhi"/>




</RelativeLayout>
        <Button
            android:id="@+id/btn_welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="20dp"
            android:background="@drawable/button_style"
            android:text="خوش آمدید"
            android:textColor="#ffffff" />

</LinearLayout>
</ScrollView>