<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layoutDirection="rtl"
    android:background="@color/intro_bg_color_2"

    >


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:gravity="right"
        android:layoutDirection="rtl"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_height="wrap_content"
        android:paddingTop="56dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp">

        <ImageView android:src="@drawable/logo1"
            android:layout_width="wrap_content"
            android:layout_height="72dp"
            android:layout_marginBottom="24dp"
            android:textColorHint="@color/colorPrimaryDark"
            android:layout_gravity="center_horizontal" />


        <com.iangclifton.android.floatlabel.FloatLabel
                android:id="@+id/hari_name"
                android:layout_width="match_parent"

            android:textColorHint="@color/colorPrimaryDark"

            android:layout_height="wrap_content"
                android:hint=""/>





        <fr.ganfra.materialspinner.MaterialSpinner

            android:id="@+id/SpinnerLandNumber"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"

            app:ms_arrowColor="@color/black"
            app:ms_floatingLabelColor="@color/black"
            app:ms_floatingLabelText=""
            app:ms_hint="@string/dialog_enter_zamen"
            app:ms_hintColor="@color/colorPrimaryDark"
            app:ms_multiline="true"
            app:ms_alignLabels="true"             />
/>




        <fr.ganfra.materialspinner.MaterialSpinner

            android:id="@+id/SpinnerfaslNumber"
            android:layout_height="wrap_content"

            android:layout_width="fill_parent"
            app:ms_arrowColor="@color/black"
            app:ms_floatingLabelColor="@color/black"
            app:ms_floatingLabelText=""
            app:ms_hint="@string/dialog_enter_fasal"
            app:ms_hintColor="@color/colorPrimaryDark"
            app:ms_multiline="true"
            app:ms_alignLabels="true"
            />



            <com.iangclifton.android.floatlabel.FloatLabel
                android:id="@+id/hari_address"
                android:layout_width="match_parent"
                android:textColorHint="@color/colorPrimaryDark"

                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:hint="" />


            <com.iangclifton.android.floatlabel.FloatLabel
                android:id="@+id/hari_number"
                android:textColorHint="@color/colorPrimaryDark"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:hint="" />



            <com.iangclifton.android.floatlabel.FloatLabel
                android:id="@+id/hari_income"
                android:layout_width="match_parent"
                android:digits="0123456789,"
                android:textColorHint="@color/colorPrimaryDark"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:hint="" />

        <com.iangclifton.android.floatlabel.FloatLabel
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/hari_conds"
            android:textColorHint="@color/colorPrimaryDark"
            android:layout_gravity="right"
            android:hint="" />


        <fr.ganfra.materialspinner.MaterialSpinner
            android:id="@+id/SpinnerFeedbackType"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:entries="@array/contype"

            app:ms_arrowColor="@color/black"
            app:ms_floatingLabelColor="@color/black"
            app:ms_floatingLabelText=""
            app:ms_hint="@string/dialog_enter_contract"

            app:ms_hintColor="@color/colorPrimaryDark"
            app:ms_multiline="true"
            app:ms_alignLabels="true"

            >

        </fr.ganfra.materialspinner.MaterialSpinner>



            <com.iangclifton.android.floatlabel.FloatLabel
                android:id="@+id/hari_"
                android:layout_width="match_parent"
                android:textColorHint="@color/colorPrimaryDark"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:digits="0123456789-"
                android:hint="" />



            <com.iangclifton.android.floatlabel.FloatLabel
                android:id="@+id/hari_experince"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="2"
                android:textColorHint="@color/colorPrimaryDark"
                android:inputType="number"
                android:hint="" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/date_layout"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_date"
            android:textSize="20sp"
            android:layout_marginBottom="24dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:textSize="20sp"
            android:textColor="@color/colorPrimaryDark"
            android:layout_marginRight="10dp"
            android:id="@+id/editText13"
            android:text="@string/dialog_title"

            />
</LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:weightSum="100"
            android:layout_marginTop="24dp"

            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="fill_parent"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:layout_weight="50"

                android:background="@color/colorPrimaryDark"
                android:textColor="@color/white"

                android:layout_height="wrap_content"
                android:text="اندراج کریں"
                android:id="@+id/btn_submit"
                />



        </LinearLayout>
    </LinearLayout>
</ScrollView>